# ddd_in_practice

./: .gitignore  Makefile  README.md  atm.db  head_office.db  pyproject.toml  pytest.ini  snack_machine.db
atm/: entrypoint.py
atm/domain/: atm.py
atm/infra/: repository.py
atm/tests/: conftest.py
atm/tests/integration/infra/: test_atm_repository.py
atm/tests/unit/domain/: test_atm.py
atm/tests/unit/ui/: test_atm_view_model.py
atm/ui/: atm_view_model.py  commands.py  view.py
common/: __init__.py
ddd_in_practice/domain/: money.py  slot.py  snack_machine.py  snack_pile.py  wallet.py
ddd_in_practice/infra/: repository.py
ddd_in_practice/ui/: commands.py  snack_machine_view_model.py  view.py
management/: entrypoint.py
management/domain/: head_office.py
management/templates/: index.html
management/tests/unit/domain/e2e/: test_entrypoint.py
shared_kernel/domain/: wallet.py
shared_kernel/tests/unit/domain/: test_money.py  test_wallet.py
snack_machine/: entrypoint.py
snack_machine/domain/: slot.py  snack.py  snack_machine.py  snack_pile.py  wallet.py
snack_machine/infra/: repository.py
snack_machine/tests/integration/infra/: test_repository.py
snack_machine/tests/unit/domain/: test_snack_machine.py
snack_machine/tests/unit/ui/: test_snack_machine_view_model.py
snack_machine/ui/: commands.py  snack_machine_view_model.py  view.py
tests/: conftest.py
tests/integration/infra/: test_repository.py
tests/unit/domain/: test_money.py  test_snack_machine.py  test_wallet.py
tests/unit/ui/: test_snack_machine_view_model.py
